# ngff-spec

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  _config.yml  _toc.yml  _version.py  authors.yml  citing.md  contribute.md  index.bs  index.md  intro.md  jsonschema_dingus.py  myst.yml  ome_zarr_conformance.py  pre_build.py  pyproject.toml  references.bib  requirements.txt  specification.md  tox.ini  transform-details.bs  version_history.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: review.yml  validation.yml
conformance/: jsonschema_dingus.py  ome_zarr_conformance.py
docs/: pre_build.py  requirements.txt  schemas.md
examples/bf2raw/: image.json  plate.json
examples/label_strict/: colors_properties.json
examples/multiscales_strict/: multiscales_example.json  multiscales_example_relative.json  multiscales_reference_to_label.json  multiscales_transformations.json
examples/ome/: series-2.json
examples/plate_strict/: plate_2wells.json  plate_6wells.json
examples/scene/: .config.json  scene_registration.json  scene_stitching.json
examples/subspace/: subspaceMultidim.json  subspacePermute.json
examples/transformations/: affine2d2d.json  affine2d2d_with_channel.json  affine2d3d.json  bijection.json  bijection_verbose.json  byDimension1.json  byDimension2.json  byDimensionInvalid1.json  byDimensionInvalid2.json  coordinates1d.json  (+16 more)
ngff_spec/: ._toc.yml.bak  CITATION.cff  _config.yml  _toc.yml  citing.md  contribute.md  examples.md  footer.md  myst.yml  pre_build.py  schemas.md  specification.md  version_history.md
schemas/: _version.schema  axes.schema  bf2raw.schema  coordinate_systems.schema  coordinate_systems_and_transforms.schema  coordinate_transformations.schema  image.schema  label.schema  ome.schema  ome_zarr.schema  plate.schema  scene.schema  strict_axes.schema  strict_coordinate_systems.schema  strict_image.schema  strict_label.schema  strict_ome_zarr.schema  strict_plate.schema  strict_well.schema  well.schema
tests/: image_suite.json  label_suite.json  plate_suite.json  strict_image_suite.json  strict_label_suite.json  strict_plate_suite.json  strict_well_suite.json  test_attributes.py  test_validation.py  well_suite.json
(+625 files in other folders)
