[project]
name = "ngff-spec"
dynamic = ["version"]
description = "Next-generation file format specification"
license = {file = "LICENSE"}
requires-python = ">=3.10"

dependencies = [
    "json-schema-for-humans",
    "json_with_comments",
    "jupyter-book==2.0.0b3",
    "jsonschema_markdown",
    "mystmd==1.6.3",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
]

[tool.setuptools_scm]
write_to = "ngff_spec/_version.py"
fallback_version = "0.0.1+nogit"
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"