[project]
name = "ngff-spec"
dynamic = ["version"]
description = "Next-generation file format specification"
requires-python = ">=3.11"

dependencies = [
    "json-schema-for-humans",
    "json_with_comments",
    "jupyter-book==2.0.0b3",
    "jsonschema_markdown",
    "mystmd==1.6.3",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
]

[tool.hatch.version]
path = "_version.py"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling>=1.8.0,<1.21.1"]
build-backend = "hatchling.build"

[tool.codespell]
skip = 'references.bib'
count = true
quiet-level = 3